@@ -11,6 +11,8 @@ IBCS APP — OPERATIONS CHANGE LOG
 - Refreshed the student dashboard hero and gamification cards with colour-forward gradients, metric badges, and motivational copy.
 - Added slide-in/out animations for lesson segments and moved the summative assessment into the main stage flow to respect pacing locks.
 - Deployment script now calls `worker/reset-db.js` before seeding so InstantDB starts from a clean slate on every `fix-and-deploy` run.
+- Unified the student dashboard behind a shared template that reads InstantDB pacing, manifest metadata, and local checkpoint analytics for every curriculum track.
+- Reflowed the Year 7 map into a responsive grid with a scrolling lesson timeline so the entire KS3 pathway is visible at once, and added a persistent “Exit presentation” control for projector view.
 
 2025-11-03  Major UI/UX modernization & design system
 ---------------------------------
